--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test:lists": "ts-node scripts/test-lists.ts",
     "test:user-creation": "ts-node scripts/test-user-creation-with-lists.ts",
     "test:roles": "ts-node scripts/test-roles.ts",
-    "test:user-cels": "ts-node scripts/test-user-creation-with-cels.ts"
+    "test:user-cels": "ts-node scripts/test-user-creation-with-cels.ts",
+    "create:tbl-lv": "ts-node scripts/create-tbl-lv.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -57,6 +58,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.2",
     "multer": "^2.0.2",
     "nest-winston": "^1.10.2",
