Ajout des CORS ORIGINS

--- a/env.example
+++ b/env.example
@@ -11,6 +11,12 @@ JWT_REFRESH_EXPIRES_IN="7d"
 NODE_ENV="development"
 PORT=3000
 
+# Configuration CORS - Liste des origines autorisées (séparées par des virgules)
+# Exemples pour le développement :
+CORS_ORIGINS="http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000"
+# Exemples pour la production :
+# CORS_ORIGINS="https://app1.votredomaine.com,https://app2.votredomaine.com,https://admin.votredomaine.com"
+
 # Configuration de sécurité
 BCRYPT_ROUNDS=12
 SESSION_TIMEOUT=3600000
